<?xml version="1.0"?>
<package>
  <name>ros_erle_statusled</name>
  <version>1.0.0</version>
  <description>The ros_erle_statusled package for Erle-Brain 2</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>GPLv3</license>
  <author email="victor@erlerobot.com">Víctor Mayoral Vilches</author> 

  <build_depend>std_msgs</build_depend> 
  <run_depend>std_msgs</run_depend> 
  <buildtool_depend>catkin</buildtool_depend>  
</package>
